[package]
name = "pooltogether-koinly-accounting"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.1", features = ["full"] }
alloy-chains = "0.1.30"
chrono = "0.4.38"
colored = "2.1.0"
dotenv = "0.15.0"
eyre = "0.6.12"
fern = { version = "0.6.2", features = ["colored"] }
foundry-block-explorers = "0.7.1"
futures-util = "0.3.30"
google-drive = { git = "https://github.com/PierrickGT/third-party-api-clients", branch = "fix/google-drive-fields" }
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
indoc = "2.0.5"
log = "0.4.22"
once_cell = "1.19.0"
op-alloy-rpc-types = "0.2.8"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
sheets = { git = "https://github.com/PierrickGT/third-party-api-clients", branch = "fix/google-drive-fields" }
tokio = { version = "1.40.0", features = ["full"] }
